Fixed formatting on Upload page to handle overflows correctly

--- a/static/css/upload.css
+++ b/static/css/upload.css
@@ -92,3 +92,15 @@ max60{
 .vAlignMiddle{
     vertical-align: middle;
 }
+
+.submitHeight {
+    height: 50px;
+}
+
+.inputAreaHeight {
+    height: calc(100% - 50px);
+}
+
+.CodeMirror {
+    height: 100%;
+}
